WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205710
[LFC][IFC] Fix fast/parser/entities-in-html.html
https://bugs.webkit.org/show_bug.cgi?id=205710
Summary
[LFC][IFC] Fix fast/parser/entities-in-html.html
alan
Reported
2020-01-02 21:16:48 PST
ssia
Attachments
Patch
(1.36 KB, patch)
2020-01-02 21:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-02 21:17:16 PST
<
rdar://problem/58290731
>
alan
Comment 2
2020-01-02 21:20:49 PST
Created
attachment 386659
[details]
Patch
Antti Koivisto
Comment 3
2020-01-03 03:23:53 PST
Comment on
attachment 386659
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=386659&action=review
> Source/WebCore/layout/inlineformatting/InlineTextItem.cpp:38 > -static inline bool isWhitespaceCharacter(char character, bool preserveNewline) > +static inline bool isWhitespaceCharacter(UChar character, bool preserveNewline)
lol
alan
Comment 4
2020-01-03 06:56:31 PST
(In reply to Antti Koivisto from
comment #3
)
> Comment on
attachment 386659
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=386659&action=review
> > > Source/WebCore/layout/inlineformatting/InlineTextItem.cpp:38 > > -static inline bool isWhitespaceCharacter(char character, bool preserveNewline) > > +static inline bool isWhitespaceCharacter(UChar character, bool preserveNewline) > > lol
exactly my thoughts.
WebKit Commit Bot
Comment 5
2020-01-03 07:42:41 PST
Comment on
attachment 386659
[details]
Patch Clearing flags on attachment: 386659 Committed
r253997
: <
https://trac.webkit.org/changeset/253997
>
WebKit Commit Bot
Comment 6
2020-01-03 07:42:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug