[LFC][IFC] Fix fast/parser/entities-in-html.html https://bugs.webkit.org/show_bug.cgi?id=205710 <rdar://problem/58290731>

Reviewed by Antti Koivisto.

* layout/inlineformatting/InlineTextItem.cpp:
(WebCore::Layout::isWhitespaceCharacter):


Canonical link: https://commits.webkit.org/218873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253997 268f45cc-cd09-0410-ab3c-d52691b4dbfc